--- a/client/app/styles/less/common.less
+++ b/client/app/styles/less/common.less
@@ -171,9 +171,33 @@ form{
   }
 }
 
+.list-brief{
+  height : 50px;
+  overflow:auto;
+}
+
+.list-img{
+  width:200px;
+  height: 100px;
+}
 
 @media (min-width: 720px) {
   .search-container{
     width:40%;
   }
+  .list-container{
+    padding-left:250px;
+  }
+  .list-brief{
+    height: 150px;
+    overflow: auto;
+  }
+  .list-img{
+    height: 250px !important;
+    width: 500px;
+  }
+}
+
+.menu-active{
+  color:#428bca !important;
 }
