--- a/client/app/styles/less/challenge.css
+++ b/client/app/styles/less/challenge.css
@@ -21,3 +21,15 @@
   -webkit-animation: fadeOutUp 0.3s ease-in-out;
   animation: fadeOutUp 0.3s ease-in-out;
 }
+.challenge-header {
+  padding-left: 50px;
+  color: white;
+  width: 100%;
+  height: 200px;
+  padding-top: 20px;
+  background-color: black;
+}
+.challenge-header h1 {
+  margin-top: 0;
+  text-decoration: underline;
+}
