--- a/client/app/styles/less/challenge.less
+++ b/client/app/styles/less/challenge.less
@@ -20,3 +20,19 @@
       animation: fadeOutUp 0.3s ease-in-out;    }
   }
 }
+
+
+
+.challenge-header{
+  padding-left : 50px;
+  color : white;
+  width:100%;
+  height: 200px;
+  padding-top:20px;
+  background-color : black;
+//  background-size: 100% 200px;
+  h1{
+    margin-top : 0;
+    text-decoration: underline;
+  }
+}
