--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -43,6 +43,18 @@
   -webkit-animation: fadeOutUp 0.3s ease-in-out;
   animation: fadeOutUp 0.3s ease-in-out;
 }
+.challenge-header {
+  padding-left: 50px;
+  color: white;
+  width: 100%;
+  height: 200px;
+  padding-top: 20px;
+  background-color: black;
+}
+.challenge-header h1 {
+  margin-top: 0;
+  text-decoration: underline;
+}
 .tabs-view {
   position: absolute;
   top: 149px;
@@ -261,6 +273,9 @@
   height: 200px;
 }
 /* padding*/
+.pad-left {
+  padding-left: 50px;
+}
 .pan {
   padding: 0;
 }
@@ -530,10 +545,32 @@ form input {
   border-color: black;
   width: 100%;
 }
+.list-brief {
+  height: 50px;
+  overflow: auto;
+}
+.list-img {
+  width: 200px;
+  height: 100px;
+}
 @media (min-width: 720px) {
   .search-container {
     width: 40%;
   }
+  .list-container {
+    padding-left: 250px;
+  }
+  .list-brief {
+    height: 150px;
+    overflow: auto;
+  }
+  .list-img {
+    height: 250px !important;
+    width: 500px;
+  }
+}
+.menu-active {
+  color: #428bca !important;
 }
 html,
 body {
