-signout problem fixed -

--- a/client/app/modules/challenge/templates/challenges.tpl.html
+++ b/client/app/modules/challenge/templates/challenges.tpl.html
@@ -5,7 +5,7 @@
     <p ng-if="me">
         <a href="" ui-sref="challengeSuggest">
             <i class="fa fa-plus my-btn" ></i>
-            <span class="text-muted" > create a new project</span>
+            <span class="text-muted" > create a new challenge</span>
         </a>
 
     </p>
