--- a/client/app/modules/header/templates/menu.tpl.html
+++ b/client/app/modules/header/templates/menu.tpl.html
@@ -25,7 +25,7 @@
             Edit Profile
         </a>
     </div>
-        <div style="position: absolute; bottom : 0px;color:black;width:100%;" ng-if="me.profile">
+        <div style="position: absolute; bottom : 0px;color:black;width:100%;" ng-if="me">
             <div class="pull-left text-muted">
                 <p>You're logged as {{ me.username }}</p>
             </div>
