--- a/client/app/modules/project/templates/project-create.tpl.html
+++ b/client/app/modules/project/templates/project-create.tpl.html
@@ -2,9 +2,23 @@
     <h2 class="center">
         Describe your project
     </h2>
-    <i class="pull-right fa fa-list fa-2x my-btn" tooltip="project list" ng-click="back()"></i>
     <form name="projectform" class="form-horizontal">
         <div class="col-xs-12">
+            <div class="form-group">
+                <label class="col-sm-2 col-xs-12 control-label">Challenge</label>
+                <div class="col-sm-10 col-xs-12">
+                    <ui-select ng-model="newProject.container" theme="bootstrap">
+                        <ui-select-match placeholder="The challenge who will own your project ...">{{$select.selected.id}}</ui-select-match>
+                        <ui-select-choices repeat="challenge in challenges">
+                            <img ng-src="{{ challenge.poster || 'http://placehold.it/25x25' }}" width="25px" alt="challenge's poster"/>
+                            <small>
+                                {{challenge.title}}
+                            </small>
+                            <div showtags entity="challenge"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
             <div class="form-group">
                 <label class="col-sm-2 col-xs-12 control-label">Project Name:</label>
                 <div class=" col-sm-10 col-xs-12">
