material-toaster replace toaster

--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -45,7 +45,7 @@
             </div>
         </section>
         <div class="row center" style="padding-top: 30px;padding-bottom: 30px;">
-            <button class="btn btn-lg btn-info" ui-sref="projectCreation">Participate to this challenge</button>
+            <button class="btn btn-lg btn-info" ng-click="participate()">Participate to this challenge</button>
         </div>
     </section>
     <section class="container-fluid">
