--- a/client/app/modules/challengeSettings/templates/challengeSettings.tpl.html
+++ b/client/app/modules/challengeSettings/templates/challengeSettings.tpl.html
@@ -1,7 +1,7 @@
 <material-tabs selected="selectedTabIndex" class="material-theme-light-blue">
-    <material-tab ui-sref="challenge.settings.basic" label="<i class='fa fa-list fa-2x'></i>" class="material-theme-light-blue">
+    <material-tab ui-sref="challengeSettings.basic" label="<i class='fa fa-list fa-2x'></i>" class="material-theme-light-blue">
     </material-tab>
-    <material-tab ui-sref="challenge.settings.poster" label="<i class='fa fa-file fa-2x'></i>" class="material-theme-light-blue">
+    <material-tab ui-sref="challengeSettings.poster" label="<i class='fa fa-file fa-2x'></i>" class="material-theme-light-blue">
     </material-tab>
 </material-tabs>
 <section ui-view="settingView" class=" container"  style="height:100%">
