--- a/client/app/modules/challengeSettings/templates/poster.tpl.html
+++ b/client/app/modules/challengeSettings/templates/poster.tpl.html
@@ -1,4 +1,4 @@
-<div>
+<section>
     <h3 class="center">New poster</h3>
     <image-crop
             data-width="300"
@@ -8,4 +8,15 @@
             data-result="imageCropResult"
             ng-show="showImageCropper">
     </image-crop>
-</div>
+</section>
+<section>
+    <h3 class="center">New banner</h3>
+    <image-crop
+            data-width="900"
+            data-height="300"
+            data-shape="square"
+            data-step="imageCropStep"
+            data-result="bannerResult"
+            ng-show="showImageCropper">
+    </image-crop>
+</section>
