--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -572,6 +572,9 @@ form input {
 .menu-active {
   color: #428bca !important;
 }
+material-toast {
+  max-height: 64px !important;
+}
 html,
 body {
   height: 100%;
